--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
-.App {
-  text-align: center;
+:root {
+  background-color: #121212;
+  /* background-image: url("https://media.architecturaldigest.com/photos/623dbec3925573a210bf3214/1:1/w_2592,h_2592,c_limit/GettyImages-157531695.jpg"); */
+  color: aqua
 }
 
 .App-logo {
@@ -7,32 +9,30 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.NavBar {
+  outline: 1px solid greenyellow;
+  margin: 10px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.left {
+  float: left;
+  flex: auto;
 }
 
-.App-link {
-  color: #61dafb;
+.right {
+  flex: auto;
+  float: right;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#toggleBtn {
+  height: 40px;
+  background-color: #121212;
+}
+
+.card {
+  margin: 1rem;
+  outline: solid 2px blueviolet;
+  width: calc(33% - 2rem);
+  float: left;
+  box-shadow: 5px 5px 10px
 }
